tests/rosetta/out/Go/constrained-genericity-1.error
parse: error[P001]: tests/rosetta/x/Mochi/constrained-genericity-1.mochi:6:1: unexpected token "}" (expected "{" Statement* "}")
  --> tests/rosetta/x/Mochi/constrained-genericity-1.mochi:6:1

  6 | }
    | ^

help:
  Check for a missing `{` or `}` to close the block.